# deep_learning

./: .gitignore  CMakeLists.txt  README.md
FCLayers/: CMakeLists.txt
FCLayers/src/: fc.cpp  main.cpp
activation_func/include/: function.hpp
activation_func/src/: main.cpp
basic_programs/: CMakeLists.txt  clt_example.cpp  eigen_premier.cpp  random_example.cpp
cmake/: Dependencies.cmake  ProjectOptions.cmake
function/: CMakeLists.txt
function/include/: dec.hpp
function/src/: bce.cpp  gradient.cpp  main.cpp  rotation.cpp
googletest_example/: CMakeLists.txt
googletest_example/include/: my_functions.hpp
googletest_example/src/: my_functions.cpp
googletest_example/tests/: test_my_function.cpp
implementing_convolutions/: CMakeLists.txt
implementing_convolutions/src/: main.cpp
iris/: CMakeLists.txt
iris/include/: definitions.hpp  layers.hpp
iris/include/book/: activation_functions.hpp  book.hpp  definitions.hpp  layers.hpp  loss_function.hpp  utils.hpp
iris/src/: iris_example.cpp
using_opencv/: CMakeLists.txt
using_opencv/src/: main.cpp
using_tensors/: CMakeLists.txt
using_tensors/src/: main.cpp
